--- a/Paginas/Blog.html
+++ b/Paginas/Blog.html
@@ -65,7 +65,7 @@
                         <div class="card-body">
                             <h5 class="card-title">LOS MEJORES SOPORTES JAMONEROS ¿CÓMO ELEGIRLOS?</h5>
                             <p class="card-text">El soporte jamonero es un elemento imprescindible para cualquier amante del jamón, pero ¿Cómo elijo el mejor soporte jamonero para mí? Existen muchos tipos de …</p>
-                            <button class="boton1">Leer mas</button>
+                            <button type="button" class="btn btn-link">Leer mas ></button>
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                         <div class="card-body">
                             <h5 class="card-title">CUCHILLOS PROFESIONALES PARA CHEF ¿CÓMO ELEGIRLOS?</h5>
                             <p class="card-text">Si eres un profesional de la cocina este post está hecho para ti. Existen infinidad de tipos de cuchillos que varían en función de la …</p>
-                            <button class="boton1 ">Leer mas</button>
+                            <button type="button" class="btn btn-link">Leer mas ></button>
                         </div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                         <div class="card-body">
                             <h5 class="card-title">CUCHILLERÍA DEPORTIVA ¿QUÉ ES? ¿QUÉ TIPOS DE CUCHILLOS EXISTEN?</h5>
                             <p class="card-text">En los últimos años ha tomado especial relevancia la cuchillería deportiva, pero, ¿Exactamente sabes a que hace referencia? Desde Cuchillería Teodomiro queremos que poco a …</p>
-                            <button class="boton1 ">Leer mas</button>
+                            <button type="button" class="btn btn-link">Leer mas ></button>
                         </div>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                         <div class="card-body">
                             <h5 class="card-title">TIPOS DE CUCHILLOS DE COCINA Y SUS USOS</h5>
                             <p class="card-text">En varios de nuestros post anteriores ya te hemos hablado por ejemplo de cómo elegir el mejor cuchillo de cocina o cómo debes cuidarlos para …</p>
-                            <button class="boton1 ">Leer mas</button>
+                            <button type="button " class="btn btn-link ">Leer mas ></button>
                         </div>
                     </div>
                 </div>
@@ -105,17 +105,22 @@
     <!-- Termina Cards -->
 
     <!--Inicia Footer-->
-    <footer>
-        <p>Redes Sociales</p>
-        <a class="mx-3 " href="../Paginas/Error404.html"><img src="../media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
-        <a class="mx-3 " href="../Paginas/Error404.html"><img src="../media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
-        <a class="mx-3 " href="../Paginas/Error404.html"><img src="../media/iconos/mail.jpg" alt="Envianos un e-mail "></a>
-        <a class="mx-3 " href="../Paginas/Error404.html"><img src="../media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
-        <p id="derechos">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
+    <footer class="page-footer">
+        <div class="container-fluid text-center">
+            <div class="row">
+                <div>
+                    <p>Redes Sociales</p>
+                    <a class="mx-3 " href="https://www.facebook.com/"><img src="../media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
+                    <a class="mx-3 " href="https://www.instagram.com/"><img src="../media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
+                    <a class="mx-3 " href="https://www.whatsapp.com/?lang=esl"><img src="../media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
+                    <p id="derechos">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
+                </div>
+            </div>
+        </div>
     </footer>
     <!--Termina Footer-->
 
-    <script src="../css/bootstrap.min.js"></script>
+    <script src="../css/bootstrap.min.js "></script>
 
 </body>
 
