--- a/Paginas/Productos.html
+++ b/Paginas/Productos.html
@@ -53,7 +53,7 @@
     </section>
     <!--Termina Breadcrumb-->
 
-    <h1 class="fst-italic text-center">Nuestros Cuchillos, Navajas y Revanadores</h1>
+    <h1>Nuestros Cuchillos, Navajas y Revanadores</h1>
 
     <!--Inicia Productos 1-->
     <section id="productos1">
@@ -64,7 +64,7 @@
                     <div class="card-body ">
                         <h5 class="card-title ">Chico</h5>
                         <p class="card-text ">Cuchillo chico con mango de madera ideal para quesos.</p>
-                        <a href="" class="btn btn-primary ">Comprar</a>
+                        <a href="../Paginas/Error404.html" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -72,7 +72,7 @@
                     <div class="card-body ">
                         <h5 class="card-title ">Mediano</h5>
                         <p class="card-text ">Cuchillo mediano con mango de madera ideal para verduras.</p>
-                        <a href="" class="btn btn-primary ">Comprar</a>
+                        <a href="../Paginas/Error404.html" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -80,7 +80,7 @@
                     <div class="card-body ">
                         <h5 class="card-title ">Grande</h5>
                         <p class="card-text ">Cuchillo grande con mango de acrilico blanco ideal para carnes.</p>
-                        <a href="" class="btn btn-primary ">Comprar</a>
+                        <a href="../Paginas/Error404.html" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -88,7 +88,7 @@
                     <div class="card-body ">
                         <h5 class="card-title ">Deportivo</h5>
                         <p class="card-text ">Cuchillo deportivo chico con mango de acrilico marron.</p>
-                        <a href="../media/CuchilloDeportivo.jpg" class="btn btn-primary ">Comprar</a>
+                        <a href="../Paginas/Error404.html" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                     <div class="card-body ">
                         <h5 class="card-title ">Navaja Grande</h5>
                         <p class="card-text ">Navaja grande con mango de metal en color marron y negro.</p>
-                        <a href="" class="btn btn-primary ">Comprar</a>
+                        <a href="../Paginas/Error404.html" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -113,7 +113,7 @@
                     <div class="card-body ">
                         <h5 class="card-title ">Navaja chica</h5>
                         <p class="card-text ">Navaja chica con mango de metal en color blanco y gris.</p>
-                        <a href="" class="btn btn-primary ">Comprar</a>
+                        <a href="../Paginas/Error404.html" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -121,7 +121,7 @@
                     <div class="card-body ">
                         <h5 class="card-title ">Revanador Grande</h5>
                         <p class="card-text ">Revanador grande con mango de metal, ideal para panes.</p>
-                        <a href="" class="btn btn-primary ">Comprar</a>
+                        <a href="../Paginas/Error404.html" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -129,7 +129,7 @@
                     <div class="card-body ">
                         <h5 class="card-title ">Revanador Mediano</h5>
                         <p class="card-text ">Revanador mediano con mango de metal, ideal para fiambres.</p>
-                        <a href="../media/CuchilloDeportivo.jpg" class="btn btn-primary ">Comprar</a>
+                        <a href="../Paginas/Error404.html" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
             </div>
@@ -137,7 +137,7 @@
     </section>
     <!--Termina Productos 2-->
 
-    <h1>Nuevos Productos</h1>
+    <h2>Nuevos Productos</h2>
 
     <!--Inicia Nuevos Productos -->
     <section id="productos3">
@@ -148,7 +148,7 @@
                     <div class="card-body ">
                         <h5 class="card-title ">Regalos <span class="badge bg-danger">NEW</span></h5>
                         <p class="card-text ">Juego de tabla y asador en funda de cuero marron.</p>
-                        <a href="" class="btn btn-primary ">Comprar</a>
+                        <a href="../Paginas/Error404.html" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -156,7 +156,7 @@
                     <div class="card-body ">
                         <h5 class="card-title ">Mates <span class="badge bg-danger">NEW</span></h5>
                         <p class="card-text ">Mates de distintos colores y tamaños.</p>
-                        <a href="" class="btn btn-primary ">Comprar</a>
+                        <a href="../Paginas/Error404.html" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -164,7 +164,7 @@
                     <div class="card-body ">
                         <h5 class="card-title ">Equipos <span class="badge bg-danger">NEW</span></h5>
                         <p class="card-text ">Equipos de mate forrados en distintos materiales.</p>
-                        <a href="" class="btn btn-primary ">Comprar</a>
+                        <a href="../Paginas/Error404.html" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -172,7 +172,7 @@
                     <div class="card-body ">
                         <h5 class="card-title ">Llaveros <span class="badge bg-danger">NEW</span></h5>
                         <p class="card-text ">Llaveros de alpaca con diferentes motivos.</p>
-                        <a href="../media/CuchilloDeportivo.jpg" class="btn btn-primary ">Comprar</a>
+                        <a href="../Paginas/Error404.html" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
             </div>
@@ -181,13 +181,18 @@
     <!--Termina Nuevos Productos -->
 
     <!--Inicia Footer-->
-    <footer>
-        <p>Redes Sociales</p>
-        <a class="mx-3 " href="../Paginas/Error404.html"><img src="../media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
-        <a class="mx-3 " href="../Paginas/Error404.html"><img src="../media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
-        <a class="mx-3 " href="../Paginas/Error404.html"><img src="../media/iconos/mail.jpg" alt="Envianos un e-mail "></a>
-        <a class="mx-3 " href="../Paginas/Error404.html"><img src="../media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
-        <p id="derechos">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
+    <footer class="page-footer">
+        <div class="container-fluid text-center">
+            <div class="row">
+                <div>
+                    <p>Redes Sociales</p>
+                    <a class="mx-3 " href="https://www.facebook.com/"><img src="../media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
+                    <a class="mx-3 " href="https://www.instagram.com/"><img src="../media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
+                    <a class="mx-3 " href="https://www.whatsapp.com/?lang=esl"><img src="../media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
+                    <p id="derechos">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
+                </div>
+            </div>
+        </div>
     </footer>
     <!--Termina Footer-->
 
