--- a/index.html
+++ b/index.html
@@ -53,11 +53,9 @@
             <div class="col-md-8 ">
                 <div id="textocardproductos" class="card-body ">
                     <h5 class="card-title">Nuestros Cuchillos</h5>
-                    <br> <br>
-                    <p class="card-text ">Tenemos una gran variedad de modelos, tamaños y materiales. Nuestros productos son fabricados con la mas alta calidad y la producción de los mismos es en forma artesanal. <br> Aqui puede encontrar cuchillos para cocina, para carnes,
+                    <p class="card-text margin ">Tenemos una gran variedad de modelos, tamaños y materiales. Nuestros productos son fabricados con la mas alta calidad y la producción de los mismos es en forma artesanal. <br> Aqui puede encontrar cuchillos para cocina, para carnes,
                         verduras; cuchillos deportivos; y mucho mas.
                     </p>
-                    <br> <br>
                     <a href="./Paginas/Productos.html " class="btn btn-primary ">Mas Informacion</a>
                 </div>
             </div>
@@ -74,10 +72,8 @@
             <div class="col-md-8 ">
                 <div id="textocardproductos" class="card-body ">
                     <h5 class="card-title">Nuevos Productos <span class="badge bg-danger ">NEW</span></h5>
-                    <br> <br>
-                    <p class="card-text">Como novedad tenemos la incorporacion de productos nuevos, como mates, tablas de madera y los tan solicitados regalos empresariales. <br> No podes dejar de pasar por nuestra seccion de productos y ver las novedades!
+                    <p class="card-text margin">Como novedad tenemos la incorporacion de productos nuevos, como mates, tablas de madera y los tan solicitados regalos empresariales. <br> No podes dejar de pasar por nuestra seccion de productos y ver las novedades!
                     </p>
-                    <br> <br>
                     <a href="./Paginas/Productos.html " class="btn btn-primary ">Mas Informacion</a>
                 </div>
             </div>
@@ -94,10 +90,8 @@
             <div class="col-md-8 ">
                 <div id="textocardproductos" class="card-body ">
                     <h5 class="card-title ">Visitá Nuestro Blog</h5>
-                    <br> <br>
-                    <p class="card-text ">En nuestro blog podras encontrar los ultimos temas de interes del rubro y los mas interesantes debates. No te pierdas las ultimas opiniones de los expertos!
+                    <p class="card-text margin ">En nuestro blog podras encontrar los ultimos temas de interes del rubro y los mas interesantes debates. No te pierdas las ultimas opiniones de los expertos!
                     </p>
-                    <br> <br>
                     <a href="./Paginas/Blog.html " class="btn btn-primary ">Mas Informacion</a>
                 </div>
             </div>
@@ -106,13 +100,18 @@
     <!--Termina Card 3-->
 
     <!--Inicia Footer-->
-    <footer>
-        <p>Redes Sociales</p>
-        <a class="mx-3 " href="./Paginas/Error404.html "><img src="./media/iconos/facebook.jpg " alt="Seguinos en facebook "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html "><img src="./media/iconos/instagram.jpg " alt="Seguinos en instagram "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html "><img src="./media/iconos/mail.jpg " alt="Envianos un e-mail "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html "><img src="./media/iconos/whassap.jpg " alt="Envianos un whatssap "></a>
-        <p id="derechos ">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
+    <footer class="page-footer">
+        <div class="container-fluid text-center">
+            <div class="row">
+                <div>
+                    <p>Redes Sociales</p>
+                    <a class="mx-3 " href="https://www.facebook.com/"><img src="../media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
+                    <a class="mx-3 " href="https://www.instagram.com/"><img src="../media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
+                    <a class="mx-3 " href="https://www.whatsapp.com/?lang=esl"><img src="../media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
+                    <p id="derechos">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
+                </div>
+            </div>
+        </div>
     </footer>
     <!--Termina Footer-->
 
