--- a/Paginas/Nosotros.html
+++ b/Paginas/Nosotros.html
@@ -93,13 +93,18 @@
     <!--Termina Section 2-->
 
     <!--Inicia Footer-->
-    <footer>
-        <p>Redes Sociales</p>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/mail.jpg" alt="Envianos un e-mail "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
-        <p id="derechos">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
+    <footer class="page-footer">
+        <div class="container-fluid text-center">
+            <div class="row">
+                <div>
+                    <p>Redes Sociales</p>
+                    <a class="mx-3 " href="https://www.facebook.com/"><img src="../media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
+                    <a class="mx-3 " href="https://www.instagram.com/"><img src="../media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
+                    <a class="mx-3 " href="https://www.whatsapp.com/?lang=esl"><img src="../media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
+                    <p id="derechos">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
+                </div>
+            </div>
+        </div>
     </footer>
     <!--Termina Footer-->
 
