--- a/Paginas/Nosotros.html
+++ b/Paginas/Nosotros.html
@@ -93,18 +93,14 @@
     <!--Termina Section 2-->
 
     <!--Inicia Footer-->
-    <footer class="page-footer">
-        <div class="container-fluid text-center">
-            <div class="row">
-                <div>
-                    <p>Redes Sociales</p>
-                    <a class="mx-3 " href="https://www.facebook.com/"><img src="../media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
-                    <a class="mx-3 " href="https://www.instagram.com/"><img src="../media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
-                    <a class="mx-3 " href="https://www.whatsapp.com/?lang=esl"><img src="../media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
-                    <p id="derechos">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
-                </div>
-            </div>
+    <footer class="footer">
+        <p>Redes Sociales</p>
+        <div class="footer__link--icono">
+            <a href="https://www.facebook.com" target="_blank"> <img class="scale" src="../media/iconos/facebook.png" alt="Icono Facebook"></a>
+            <a href="https://www.instagram.com" target="_blank"> <img class="scale" src="../media/iconos/instagram.png" alt="Icono Instagram"></a>
+            <a href="https://www.whatsapp.com/?lang=esl" target="_blank"> <img class="scale" src="../media/iconos/whatsapp.png" alt="Icono whatsap"></a>
         </div>
+        <p>Todos los derechos reservados</p>
     </footer>
     <!--Termina Footer-->
 
