cambios en la nav

--- a/Paginas/Blog.html
+++ b/Paginas/Blog.html
@@ -19,24 +19,26 @@
 <body>
 
     <!--Inicia Nav-->
-    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">
-                <img src="../media/logo1.png" alt="imagen de cuchillos cruzados">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <header class="position-sticky top-0 nav__z--index">
+        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../media/logo1.png" alt="imagen de cuchillos cruzados">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link" aria-current="page" href="../Paginas/Nosotros.html">Nosotros</a>
-                    <a class="nav-link" href="../Paginas/Productos.html">Productos</a>
-                    <a class="nav-link active" href="../Paginas/Blog.html">Blog</a>
-                    <a class="nav-link" href="../Paginas/Contacto.html">Contacto</a>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" aria-current="page" href="../Paginas/Nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="../Paginas/Productos.html">Productos</a>
+                        <a class="nav-link active" href="../Paginas/Blog.html">Blog</a>
+                        <a class="nav-link" href="../Paginas/Contacto.html">Contacto</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
     <!--Termina Nav-->
 
     <!--Inicia Breadcrumb-->
@@ -56,7 +58,7 @@
     <h1>Blog</h1>
 
     <!-- Inicia Cards -->
-    <section id="blog">
+    <section id="pagina__blog">
         <div class="container ">
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
@@ -65,7 +67,7 @@
                         <div class="card-body">
                             <h5 class="card-title">LOS MEJORES SOPORTES JAMONEROS ¿CÓMO ELEGIRLOS?</h5>
                             <p class="card-text">El soporte jamonero es un elemento imprescindible para cualquier amante del jamón, pero ¿Cómo elijo el mejor soporte jamonero para mí? Existen muchos tipos de …</p>
-                            <button type="button" class="btn btn-link">Leer mas ></button>
+                            <a href="../Paginas/Error404.html" class="btn btn-link ">Leer más ></a>
                         </div>
                     </div>
                 </div>
@@ -75,7 +77,7 @@
                         <div class="card-body">
                             <h5 class="card-title">CUCHILLOS PROFESIONALES PARA CHEF ¿CÓMO ELEGIRLOS?</h5>
                             <p class="card-text">Si eres un profesional de la cocina este post está hecho para ti. Existen infinidad de tipos de cuchillos que varían en función de la …</p>
-                            <button type="button" class="btn btn-link">Leer mas ></button>
+                            <a href="../Paginas/Error404.html" class="btn btn-link ">Leer más ></a>
                         </div>
                     </div>
                 </div>
@@ -85,7 +87,7 @@
                         <div class="card-body">
                             <h5 class="card-title">CUCHILLERÍA DEPORTIVA ¿QUÉ ES? ¿QUÉ TIPOS DE CUCHILLOS EXISTEN?</h5>
                             <p class="card-text">En los últimos años ha tomado especial relevancia la cuchillería deportiva, pero, ¿Exactamente sabes a que hace referencia? Desde Cuchillería Teodomiro queremos que poco a …</p>
-                            <button type="button" class="btn btn-link">Leer mas ></button>
+                            <a href="../Paginas/Error404.html" class="btn btn-link ">Leer más ></a>
                         </div>
                     </div>
                 </div>
@@ -95,7 +97,7 @@
                         <div class="card-body">
                             <h5 class="card-title">TIPOS DE CUCHILLOS DE COCINA Y SUS USOS</h5>
                             <p class="card-text">En varios de nuestros post anteriores ya te hemos hablado por ejemplo de cómo elegir el mejor cuchillo de cocina o cómo debes cuidarlos para …</p>
-                            <button type="button " class="btn btn-link ">Leer mas ></button>
+                            <a href="../Paginas/Error404.html" class="btn btn-link ">Leer más ></a>
                         </div>
                     </div>
                 </div>
@@ -105,7 +107,7 @@
     <!-- Termina Cards -->
 
     <!--Inicia Footer-->
-    <footer class="footer">
+    <footer>
         <p>Redes Sociales</p>
         <div class="footer__link--icono">
             <a href="https://www.facebook.com" target="_blank"> <img class="scale" src="../media/iconos/facebook.png" alt="Icono Facebook"></a>
