--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -19,24 +19,26 @@
 
 <body>
     <!--Inicia Nav-->
-    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">
-                <img src="../media/logo1.png" alt="imagen de cuchillos cruzados">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <header class="position-sticky top-0 nav__z--index">
+        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../media/logo1.png" alt="imagen de cuchillos cruzados">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link" aria-current="page" href="../Paginas/Nosotros.html">Nosotros</a>
-                    <a class="nav-link" href="../Paginas/Productos.html">Productos</a>
-                    <a class="nav-link" href="../Paginas/Blog.html">Blog</a>
-                    <a class="nav-link active" href="../Paginas/Contacto.html">Contacto</a>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" aria-current="page" href="../Paginas/Nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="../Paginas/Productos.html">Productos</a>
+                        <a class="nav-link" href="../Paginas/Blog.html">Blog</a>
+                        <a class="nav-link active" href="../Paginas/Contacto.html">Contacto</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
     <!--Termina Nav-->
 
     <!--Inicia Breadcrumb-->
@@ -67,7 +69,7 @@
                         <input class="form-control my-3" type="text" placeholder="Asunto">
                         <textarea class="form-control" placeholder="Mensaje"></textarea>
                         <div class="d-grid gap-2 p-2">
-                            <button class="btn btn-primary" type="button">Enviar</button>
+                            <button class="btn btn-primary" type="submit">Enviar</button>
                         </div>
                     </form>
                 </article>
@@ -83,7 +85,7 @@
     <!--Termina Planilla de Contacto-->
 
     <!--Inicia Footer-->
-    <footer class="footer">
+    <footer>
         <p>Redes Sociales</p>
         <div class="footer__link--icono">
             <a href="https://www.facebook.com" target="_blank"> <img class="scale" src="../media/iconos/facebook.png" alt="Icono Facebook"></a>
