--- a/Paginas/Error404.html
+++ b/Paginas/Error404.html
@@ -16,30 +16,14 @@
 <body>
 
 
-    <section id="error404">
-        <img src="../media/logo.png" alt="">
-        <h3 id="error404textos">ERROR 404</h3>
-        <h4 id="error404textos">No hemos encontrado la página que estás buscando</h4>
-        <h5 id="error404textos">Te invitamos a volver a la página de Mi Cuchillo</h5>
+    <section id="pagina__error404">
+        <img id="pagina__error404--imagen" src="../media/logo1.png" alt="imagen de cuchillos cruzados">
+        <h3 id="pagina__error404--textos">ERROR 404</h3>
+        <h4 id="pagina__error404--textos">No hemos encontrado la página que estás buscando</h4>
+        <h5 id="pagina__error404--textos">Te invitamos a volver a la página de Mi Cuchillo</h5>
         <li>
-            <a href="../index.html">Inicio</a>
+            <a href="../index.html">Mi Cuchillo</a>
         </li>
-        <li>
-            <a href="../Paginas/Nosotros.html">Nosotros</a>
-        </li>
-        <li>
-            <a href="../Paginas/Productos.html">Productos</a>
-        </li>
-        <li>
-            <a href="../Paginas/Blog.html">Blog</a>
-        </li>
-        <li>
-            <a href="../Paginas/Contacto.html">Contacto</a>
-        </li>
-        <br>
-        <br>
-        <br>
-        <br>
     </section>
 
     <script src="../css/bootstrap.min.js"></script>
