--- a/Paginas/Productos.html
+++ b/Paginas/Productos.html
@@ -19,24 +19,26 @@
 
 <body>
     <!--Inicia Nav-->
-    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">
-                <img src="../media/logo1.png" alt="imagen de cuchillos cruzados">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <header class="position-sticky top-0 nav__z--index">
+        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../media/logo1.png" alt="imagen de cuchillos cruzados">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link" aria-current="page" href="../Paginas/Nosotros.html">Nosotros</a>
-                    <a class="nav-link active" href="../Paginas/Productos.html">Productos</a>
-                    <a class="nav-link" href="../Paginas/Blog.html">Blog</a>
-                    <a class="nav-link" href="../Paginas/Contacto.html">Contacto</a>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" aria-current="page" href="../Paginas/Nosotros.html">Nosotros</a>
+                        <a class="nav-link active" href="../Paginas/Productos.html">Productos</a>
+                        <a class="nav-link" href="../Paginas/Blog.html">Blog</a>
+                        <a class="nav-link" href="../Paginas/Contacto.html">Contacto</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
     <!--Termina Nav-->
 
     <!--Inicia Breadcrumb-->
@@ -56,7 +58,7 @@
     <h1>Nuestros Cuchillos, Navajas y Revanadores</h1>
 
     <!--Inicia Productos 1-->
-    <section id="productos1">
+    <section id="car__productos1--padding">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
@@ -97,7 +99,7 @@
     <!--Termina Productos 1-->
 
     <!--Inicia Productos 2-->
-    <section id="productos2">
+    <section id="card__productos2--padding">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
@@ -140,7 +142,7 @@
     <h2>Nuevos Productos</h2>
 
     <!--Inicia Nuevos Productos -->
-    <section id="productos3">
+    <section id="card__productos3--padding">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
@@ -181,7 +183,7 @@
     <!--Termina Nuevos Productos -->
 
     <!--Inicia Footer-->
-    <footer class="footer">
+    <footer>
         <p>Redes Sociales</p>
         <div class="footer__link--icono">
             <a href="https://www.facebook.com" target="_blank"> <img class="scale" src="../media/iconos/facebook.png" alt="Icono Facebook"></a>
