--- a/Paginas/Blog.html
+++ b/Paginas/Blog.html
@@ -19,7 +19,7 @@
 <body>
 
     <!--Inicia Nav-->
-    <header class="position-sticky top-0 nav__z--index">
+    <header class="position-sticky top-0 nav__z-index">
         <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
